docs-kits_versioned_docs/version-26.09/kits/business-partner-kit/adoption-view.md
---
id: adoption-view
title: Adoption View
description: Business Partner KIT
sidebar_position: 2
---

<!--
Copyright (c) 2023-2026 ZF Friedrichshafen AG
Copyright (c) 2023-2026 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
Copyright (c) 2023-2026 SAP SE
Copyright (c) 2023-2026 Volkswagen AG
Copyright (c) 2023-2026 Robert Bosch GmbH
Copyright (c) 2023-2026 Mercedes Benz Group
Copyright (c) 2023-2026 BASF SE
Copyright (c) 2023-2026 Schaeffler AG
Copyright (c) 2023-2026 Contributors to the Eclipse Foundation

See the NOTICE file(s) distributed with this work for additional
information regarding copyright ownership.

This documentation and the accompanying materials are made available under
the terms of the Creative Commons Attribution 4.0 International License,
which is available at https://creativecommons.org/licenses/by/4.0/legalcode.

SPDX-License-Identifier: CC-BY-4.0
-->

<!--
KIT LOGO START - Generated automatically from the configuration done in Kit Master Data
Do not remove!
This logo is only visible when compiled with Docusaurus (final version of the hosted KIT)
-->

import Kit3DLogo from '@site/src/components/2.0/Kit3DLogo';

<Kit3DLogo kitId="business-partner" />

![Business partner kit banner](@site/static/img/kits/business-partner/business-partner-logo.svg)

<!--
KIT LOGO END
-->

**Unique business partner data sets for the whole data space.**

## Vision & Mission

**Basis for the integration of value-adding services in the area of business partner data management.**

The BusinessPartner KIT provides high-quality data records of business partners called golden record including a unique identifier and the business partner number (BPN). The BPN provides a standardized and unique identifier on legal entity, site and address level. The connected backend service removes duplicate data, adds missing information, and improves data quality from different data sources so-called sharing member.

- **Legal Entity Level (BPN L)**: Search for a legal entity and get the high-quality data set.
- **Site Level (BPN S)**: Get the site information of a legal entity. A legal entity can have one or more sites.
- **Address Level (BPN A)**: Each legal entity and site has an address to find the company. One address can belong to several sites.

**The KIT provides a homogeneous semantic with an open data model, enables the access to high quality data and provides one access point to the business partner data sets.**
<br/>

### What a Golden Record Carries

Beyond the data of a single business partner, a golden record carries:

- **Relations**: a legal entity can be managed by, majority-owned by, the alternative headquarter of, or succeeded by another legal entity; sites and addresses can be succeeded by another site or address. Every relation has a validity period and a reason code.
- **The ultimate owner**: the top of an ownership chain, resolved from the shared ownership relations and readable directly.
- **Confidence criteria**: how many sharing members share the record, whether its owner shared it, whether an external data source checked it, and when it was last and will next be checked. A confidence level is derived from these.
- **Script variants**: names and addresses in further scripts alongside the invariant data.

![BuildApps](@site/static/img/BPKITBuildApps.png)

## Business Value

**One open data model**
Application and service providers reduce investments to integrate due to one data model / API specification and open interface. The pool API enables the integration and offering of value-added services and innovation based on high-quality master data.

**Access to new market potentials**
Potential to scale customer group and access new market potentials via Catena-X marketplace and shared service network. The BP KIT enables an interoperable foundation for value-added services.

**The unique identifier**
BPN is the unique number to identify and find partners in the Catena-X network. It will also provide high quality data sets from business partners, their legal unit, sites and addresses.

**The industry’s largest golden record collection**
as a shared and cost-optimized service (quality tested by the biggest players).

---
<br/>

## Use Case

**Status Quo**
**Todays challenge for automotive companies**

Most of today’s automotive companies have to invest a significant amount of resources to keep their individual partner master data updated and correct, since outdated or incorrect data records result in federal fines and wrong claims / billing processes. The industry spends a vast amount into an area that is non differentiating, regulated and executed redundantly across the partners.

For this, cutting individual company costs by offering the golden master data record as a shared service is the mission. And proactively reduce Business Partner risk via collaborative value-add services.
More insights to the business partner data management use case here: [Catena-X | Business Partner Use Case](https://catena-x.net/use-case-cluster/next-level-master-data-management/)

OEMs and small-medium enterprises:

- Reduce today’s individual investments in master data management
- Re-allocate freed-up resources to differentiating / critical tasks
- Time to value within 6 months, due to standard interfaces and mapping tools (e.g. SAP)
- Increase data quality and use industry collective wisdom to act pro-actively (e.g. fraud alerts)
- Take part without a master data management system: the Gate also accepts a business partner data set as a CSV file and offers a template for it

Solution Provider:

- Reduce investments to integrate due to one Data Model and open interface.
- The KIT enables the offering of value-add services and innovation based on golden record and collective wisdom.
- Potential to scale customer group and access new market potentials via marketplace and shared service network.

## Standards

Our relevant standards can be downloaded from the official web page [Catena-X Standard Library](https://catenax-ev.github.io/docs/standards/overview).
The versions below are those valid in the current Catena-X release **CX-Titan**, which this KIT release targets.

The standards the golden record process itself implements:

- [CX-0010 Business Partner Number v3.0.1](https://catenax-ev.github.io/docs/standards/CX-0010-BusinessPartnerNumber)
- [CX-0012 Business Partner Data Pool API v5.1.1](https://catenax-ev.github.io/docs/standards/CX-0012-BusinessPartnerDataPoolAPI)
- [CX-0074 Business Partner Gate API v4.1.1](https://catenax-ev.github.io/docs/standards/CX-0074-BusinessPartnerGateAPI)
- [CX-0076 Golden Record End-to-End Requirements v1.5.0](https://catenax-ev.github.io/docs/standards/CX-0076-GoldenRecordEndtoEndRequirementsStandard)

Standards for value-added services built on business partner data:

- [CX-0077 Data Quality Dashboard v1.2.2](https://catenax-ev.github.io/docs/standards/CX-0077-DataQualityDashboard)
- [CX-0078 Bank Data Verification Dashboard v1.2.2](https://catenax-ev.github.io/docs/standards/CX-0078-BankDataVerificationDashboard)
- [CX-0079 Natural Person Screening Dashboard v1.2.2](https://catenax-ev.github.io/docs/standards/CX-0079-NaturalPersonScreeningDashboard)
- [CX-0080 BPDM Fraud Prevention Service v1.1.1](https://catenax-ev.github.io/docs/standards/CX-0080-BPDMFraudPreventionService)
- [CX-0081 Country Risk API v1.2.1](https://catenax-ev.github.io/docs/standards/CX-0081-BPDMCountryRisk)
- [CX-0116 Sanction Party Watchlist Dashboard v1.2.2](https://catenax-ev.github.io/docs/standards/CX-0116-SanctionWatchlistDashboard)

## NOTICE

This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2023-2026 ZF Friedrichshafen AG
- SPDX-FileCopyrightText: 2023-2026 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
- SPDX-FileCopyrightText: 2023-2026 SAP SE
- SPDX-FileCopyrightText: 2023-2026 Volkswagen AG
- SPDX-FileCopyrightText: 2023-2026 Robert Bosch GmbH
- SPDX-FileCopyrightText: 2023-2026 Mercedes Benz Group
- SPDX-FileCopyrightText: 2023-2026 BASF SE
- SPDX-FileCopyrightText: 2023-2026 Schaeffler AG
- SPDX-FileCopyrightText: 2023-2026 Contributors to the Eclipse Foundation
- Source URL: [https://github.com/eclipse-tractusx/bpdm](https://github.com/eclipse-tractusx/bpdm)
